--- a/avance1.ipynb
+++ b/avance1.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,38 +37,6 @@
     "        action = self.max_action * tf.nn.tanh(features)\n",
     "        return action\n",
     "    \n",
-    "    \n",
-    " "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: id=103, shape=(1, 1), dtype=float32, numpy=array([[-0.4862765]], dtype=float32)>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a=Actor((1,),1,3)\n",
-    "state = np.array([[2]])\n",
-    "a(state)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "class Critic(tf.keras.Model):\n",
     "    def __init__(self, state_shape, action_dim, units=[400, 300], name=\"Critic\"):\n",
     "        super().__init__(name=name)\n",
@@ -90,29 +58,62 @@
     "        features = tf.nn.relu(self.l1(features))\n",
     "        features = tf.nn.relu(self.l2(features))\n",
     "        features = self.l3(features)\n",
-    "        return features"
+    "        return features\n",
+    "    \n",
+    "    \n",
+    " "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PROBANDO 1-2-3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: id=223, shape=(1, 1), dtype=float32, numpy=array([[0.03162224]], dtype=float32)>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([[0.21592781]], shape=(1, 1), dtype=float32)\n",
+      "tf.Tensor([[0.03099412]], shape=(1, 1), dtype=float32)\n"
+     ]
     }
    ],
    "source": [
+    "a=Actor((1,),1,3)\n",
+    "state = np.array([[2]])\n",
+    "print(a(state))\n",
+    "\n",
     "cc = Critic((1,),1)\n",
-    "cc([tf.constant(state,dtype=np.float32),\n",
-    "    tf.constant(a(state),dtype=np.float32)])"
+    "print(cc([tf.constant(state,dtype=np.float32),\n",
+    "    tf.constant(a(state),dtype=np.float32)]))"
    ]
   },
   {
@@ -132,28 +133,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "FIN PROBANDO 1-2-3"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.optimizer_v2.adam.Adam at 0x139ac8400>"
+       "<tensorflow.python.keras.optimizer_v2.adam.Adam at 0x7f8bfab89be0>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tf.keras.optimizers.Adam(learning_rate=0.01)\n"
+    "tf.keras.optimizers.Adam(learning_rate=0.01)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,8 +218,35 @@
     "    with tf.device(\"/cpu:0\"):\n",
     "        action = actor(state)\n",
     "        action += tf.random.normal(shape=action.shape, mean=0., stddev=0.1, dtype=tf.float32)\n",
-    "        return tf.clip_by_value(action, -actor.max_action, actor.max_action)"
+    "        return tf.clip_by_value(action, -actor.max_action, actor.max_action)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.2885803"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "give_action().numpy().flatten()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -202,6 +265,75 @@
     "        td_errors = target_Q - current_Q\n",
     "        return td_errors\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@tf.function\n",
+    "def td_error_body_bandit(actions, rewards):\n",
+    "    with tf.device(\"/cpu:0\"):\n",
+    "        target_Q = critic_target( [ actor_target(next_states)] )\n",
+    "        target_Q = rewards + target_Q\n",
+    "        target_Q = tf.stop_gradient(target_Q)\n",
+    "        current_Q = critic([statex, actions])\n",
+    "        td_errors = target_Q - current_Q\n",
+    "        return td_errors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@tf.function\n",
+    "def td_error_body_L2(states, actions, next_states, rewards):\n",
+    "    with tf.device(\"/cpu:0\"):\n",
+    "        target_Q = critic_target( [next_states, actor_target(next_states)] )\n",
+    "        target_Q = rewards + target_Q\n",
+    "        target_Q = tf.stop_gradient(target_Q)\n",
+    "        current_Q = critic([statex, actions])\n",
+    "        td_errors = target_Q - current_Q\n",
+    "        return td_errors"
    ]
   },
   {
@@ -295,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
