--- a/banditDDPG.ipynb
+++ b/banditDDPG.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,6 +58,118 @@
     "    for source_variable,target_variable in zip(net1.trainable_variables, net2.trainable_variables):\n",
     "        source_variable.assign(tau*source_variable + (1.0 - tau)*target_variable)\n",
     "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "critic = Actor((1,),1,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: id=367, shape=(1, 1, 1), dtype=float32, numpy=array([[[0.01983018]]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "critic(np.array([[[2.]]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = []\n",
+    "for i in range(40):\n",
+    "    f.append([[[np.random.random()]]])\n",
+    "actions = np.array(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.00121733]\n",
+      "[0.00135996]\n",
+      "[0.00985319]\n",
+      "[0.00122663]\n",
+      "[0.0044041]\n",
+      "[0.00521271]\n",
+      "[0.00491943]\n",
+      "[0.0078315]\n",
+      "[0.0001586]\n",
+      "[0.00145058]\n",
+      "[0.00882651]\n",
+      "[0.0026566]\n",
+      "[0.00119674]\n",
+      "[0.00089821]\n",
+      "[0.00391003]\n",
+      "[0.00539965]\n",
+      "[0.00601971]\n",
+      "[0.00272013]\n",
+      "[0.00940686]\n",
+      "[0.00375981]\n",
+      "[0.00777483]\n",
+      "[0.0069843]\n",
+      "[0.00609641]\n",
+      "[0.00193624]\n",
+      "[0.00027401]\n",
+      "[0.00942813]\n",
+      "[0.0011277]\n",
+      "[0.00096804]\n",
+      "[0.00887218]\n",
+      "[0.00391494]\n",
+      "[0.00735118]\n",
+      "[0.00219783]\n",
+      "[0.00622189]\n",
+      "[0.0089083]\n",
+      "[0.00790127]\n",
+      "[0.00743638]\n",
+      "[0.00200745]\n",
+      "[0.00923134]\n",
+      "[0.00386242]\n",
+      "[0.00958476]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in critic(actions).numpy():\n",
+    "    print(i.flatten())"
    ]
   },
   {
