--- a/DDQN_two_layers.ipynb
+++ b/DDQN_two_layers.ipynb
@@ -677,51 +677,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch = buffer.sample(30)\n",
+    "outcomes1 = np.array([v[0] for v in batch])\n",
+    "outcomes2 = np.array([v[1] for v in batch])\n",
+    "betas1 = np.array([v[2] for v in batch])\n",
+    "betas2 = np.array([v[3] for v in batch])\n",
+    "guesses = np.array([v[4] for v in batch])\n",
+    "rewards = np.array([v[5] for v in batch])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch = buffer.sample(30)\n",
+    "states_l2 = np.array([np.array([v[0], v[2]]) for v in batch]) \n",
+    "outcomes1 = np.array([v[0] for v in batch])\n",
+    "outcomes2 = np.array([v[1] for v in batch])\n",
+    "betas1 = np.array([v[2] for v in batch])\n",
+    "betas2 = np.array([v[3] for v in batch])\n",
+    "guesses = np.array([v[4] for v in batch])\n",
+    "rewards = np.array([v[5] for v in batch])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(1, 0, -0.1000000000000002, 0.9999999999999996, 1, 0),\n",
-       " (1, 0, -0.5000000000000001, -0.20000000000000018, 1, 1),\n",
-       " (1, 0, -1.0, -1.0, -1, 1),\n",
-       " (0, 0, -0.40000000000000013, 0.19999999999999973, 1, 0),\n",
-       " (0, 0, -0.20000000000000018, -0.40000000000000013, -1, 1),\n",
-       " (0, 0, -0.5000000000000001, -1.0, 1, 0),\n",
-       " (0, 0, -2.220446049250313e-16, 0.9999999999999996, -1, 0),\n",
-       " (0, 0, -0.1000000000000002, 0.5999999999999996, 1, 1),\n",
-       " (1, 1, -0.6000000000000001, -0.6000000000000001, 1, 1),\n",
-       " (1, 0, -0.7000000000000001, -0.20000000000000018, 1, 1),\n",
-       " (0, 0, -2.220446049250313e-16, 0.5999999999999996, 1, 0),\n",
-       " (0, 0, -0.1000000000000002, -0.20000000000000018, -1, 0),\n",
-       " (0, 0, -0.6000000000000001, -0.40000000000000013, 1, 0),\n",
-       " (1, 1, -0.30000000000000016, -0.20000000000000018, 1, 1),\n",
-       " (1, 0, -0.9, -0.40000000000000013, -1, 0),\n",
-       " (1, 0, -0.9, -2.220446049250313e-16, -1, 0),\n",
-       " (0, 0, -0.20000000000000018, 0.9999999999999996, 1, 1),\n",
-       " (0, 1, -1.0, 0.7999999999999996, 1, 0),\n",
-       " (1, 0, -0.1000000000000002, -0.20000000000000018, -1, 0),\n",
-       " (0, 1, -0.5000000000000001, 0.7999999999999996, 1, 0),\n",
-       " (0, 1, -0.8, -0.8, 1, 1),\n",
-       " (0, 1, -0.9, 0.7999999999999996, 1, 0),\n",
-       " (1, 1, -1.0, -0.20000000000000018, 1, 1),\n",
-       " (0, 1, -0.40000000000000013, 0.3999999999999997, 1, 0),\n",
-       " (0, 0, -0.30000000000000016, 0.5999999999999996, 1, 1),\n",
-       " (1, 0, -0.6000000000000001, 0.3999999999999997, 1, 1),\n",
-       " (1, 1, -0.5000000000000001, 0.19999999999999973, 1, 0),\n",
-       " (1, 0, -0.7000000000000001, -2.220446049250313e-16, 1, 1),\n",
-       " (1, 0, -0.8, 0.9999999999999996, 1, 1),\n",
-       " (0, 0, -0.40000000000000013, 0.3999999999999997, -1, 1)]"
+       "<tf.Tensor: shape=(1, 30, 100), dtype=float32, numpy=\n",
+       "array([[[-0.00139923, -0.04173391, -0.044548  , ...,  0.03074407,\n",
+       "         -0.0460451 , -0.03224224],\n",
+       "        [-0.00134229, -0.04193679, -0.04432393, ...,  0.03055716,\n",
+       "         -0.04678695, -0.03227474],\n",
+       "        [-0.00139439, -0.04194142, -0.04432018, ...,  0.03056155,\n",
+       "         -0.04681036, -0.03225394],\n",
+       "        ...,\n",
+       "        [-0.00146208, -0.04196987, -0.0442961 , ...,  0.03057148,\n",
+       "         -0.04683877, -0.03220223],\n",
+       "        [-0.00144177, -0.04194852, -0.04431429, ...,  0.03056609,\n",
+       "         -0.04683139, -0.03223183],\n",
+       "        [-0.00112144, -0.04192987, -0.04432398, ...,  0.03052749,\n",
+       "         -0.04668748, -0.03232181]]], dtype=float32)>"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "buffer.sample(30)"
+    "qn_l2(np.expand_dims(states_l2, axis=0))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qvals_l1_prim = qn_l1(np.expand_dims(np.array([ [] for i in range(30)]),axis=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qvals_l1_prim = qn_l1(np.expand_dims(np.array([]), axis=0))\n",
+    "qvals_l1_target = qn_l1(np.expand_dims(np.array([]), axis=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(1, 100), dtype=float32, numpy=\n",
+       "array([[-0.03455481, -0.01170235, -0.04903212,  0.03421739,  0.0528808 ,\n",
+       "         0.00525958,  0.01107826, -0.01987387, -0.03346476,  0.01991519,\n",
+       "        -0.02900896,  0.01681749,  0.04260123,  0.03995398,  0.02402009,\n",
+       "        -0.01783213, -0.00369048, -0.04528306,  0.05035957, -0.04076263,\n",
+       "        -0.00512198, -0.00016955, -0.03052522, -0.0411858 ,  0.02732056,\n",
+       "         0.04958795,  0.00553116,  0.04764386, -0.01107096, -0.00509022,\n",
+       "        -0.03770528, -0.00056528,  0.02100876,  0.01279437,  0.03927073,\n",
+       "         0.01397531,  0.01601703,  0.01414498,  0.04388795, -0.02447616,\n",
+       "        -0.03036447,  0.03708176, -0.00076221, -0.00453608, -0.02963739,\n",
+       "         0.01244547, -0.03610297, -0.0435673 , -0.01007746, -0.01713593,\n",
+       "        -0.03422749,  0.0463099 ,  0.04414511, -0.01837685,  0.03315228,\n",
+       "        -0.05380254, -0.02254123, -0.03564161,  0.02493927, -0.04122977,\n",
+       "        -0.00441403, -0.00036001, -0.03097798, -0.01231195,  0.01716325,\n",
+       "         0.02562855,  0.04383612,  0.00814868,  0.0378971 , -0.00647124,\n",
+       "         0.04429306, -0.00713201,  0.03154496, -0.02574911, -0.02929702,\n",
+       "         0.04372145, -0.00761121,  0.01417256,  0.02293532, -0.02636258,\n",
+       "        -0.00473378, -0.01489965,  0.00555093,  0.03698164, -0.03531197,\n",
+       "        -0.03558898,  0.03029641, -0.04079974, -0.03436493,  0.00985582,\n",
+       "         0.03672901, -0.00947815, -0.03055068, -0.03125196, -0.04465856,\n",
+       "         0.02650262, -0.03870437,  0.03217306, -0.00021444, -0.00017937]],\n",
+       "      dtype=float32)>"
+      ]
+     },
+     "execution_count": 182,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opt_qvals_l2_prim = qn_l2(np.expand_dims())"
    ]
   },
   {
