all toghether now

--- a/explaining_updates_first_layer.ipynb
+++ b/explaining_updates_first_layer.ipynb
@@ -1105,9 +1105,21 @@
    "execution_count": 62,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pred_prim = qn_l1_prim(np.expand_dims(np.array([[] for i in range(len(batch))]), axis=0))"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1452,35 +1464,27 @@
    "execution_count": 57,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "optimizer_ql1 = tf.keras.optimizers.Adam(lr=0.001)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tf.Tensor(0.18601634, shape=(), dtype=float32)\n",
-      "[None, None, None, None, None, None]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "optimizer_ql1 = tf.keras.optimizers.Adam(lr=0.001)\n",
+    "\n",
     "with tf.device(\"/cpu:0\"):\n",
     "    with tf.GradientTape() as tape:\n",
     "        tape.watch(qn_l1_prim.trainable_variables)\n",
     "        \n",
+    "        pred_prim = qn_l1_prim(np.expand_dims(np.array([[] for i in range(len(batch))]), axis=0))\n",
     "        \n",
-    "        \n",
-    "        loss_sum =tf.keras.losses.MSE(targs, target_qlp1)\n",
+    "        loss_sum =tf.keras.losses.MSE(pred_prim, targs)\n",
     "        loss = tf.reduce_mean(loss_sum)\n",
+    "\n",
     "        grads = tape.gradient(loss, qn_l1_prim.trainable_variables)\n",
-    "        #optimizer_ql1.apply_gradients(zip(grads, qn_l1_prim.trainable_variables))"
+    "        optimizer_ql1.apply_gradients(zip(grads, qn_l1_prim.trainable_variables))"
    ]
   },
   {
