--- a/zeus's/tuesday_nigth.ipynb
+++ b/zeus's/tuesday_nigth.ipynb
@@ -529,7 +529,7 @@
     "        print(\"n: {}, guess: {}\".format(outc(index), (-1)**(index+1) ))\n",
     "        print(\"pred: {}\".format(last_epoch_preds[\"values\"][str(index)]))\n",
     "        print(\"true value: {}\".format( qval(-.7, outc(index), (-1)**(index+1))))\n",
-    "        print(last_epoch_preds[\"values\"][str(index)] - qval(-.7, outc(index), (-1)**(index+1)))\n",
+    "        print(\"difference: \",last_epoch_preds[\"values\"][str(index)] - qval(-.7, outc(index), (-1)**(index+1)))\n",
     "        print(\"----\")\n",
     "    print(\"  \")\n",
     "    print(\" ***** \")"
