--- a/kennedy_receiver_offline-enhancing_greedy_pOutome_sampling.ipynb
+++ b/kennedy_receiver_offline-enhancing_greedy_pOutome_sampling.ipynb
@@ -796,6 +796,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### this problem of not learning the correct this for n=1 persists (plot (0,1))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
