--- a/kennedy_receiver_offline-enhancing_greedy_uniform_sampling_n1.ipynb
+++ b/kennedy_receiver_offline-enhancing_greedy_uniform_sampling_n1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,16 +200,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f535c4876a0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f4bc77f7240>"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
