--- a/tutorial_learning_q_values_part_2_fixed_BS.ipynb
+++ b/tutorial_learning_q_values_part_2_fixed_BS.ipynb
@@ -156,7 +156,7 @@
     "for index_beta, beta in enumerate(betas_train):\n",
     "    sp = np.split(data[index_beta],4)\n",
     "    for index_ng in range(4):\n",
-    "        mean_values[str(index_beta)][str(index_ng)]=np.mean(sp[index_ng][:,3])"
+    "        mean_values[str(index_beta)][str(index_ng)]=np.mean(sp[index_ng][:,3])\n"
    ]
   },
   {
