--- a/trash/clean_2L.ipynb
+++ b/trash/clean_2L.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,115 +107,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "tree = Actions()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'0': {'[]': 0.09536316655133259},\n",
-       " '1': {'[0]': 0.9805776651934801, '[1]': 0.3924997874180116},\n",
-       " '2': {'[0 0]': 0.9592507899371683,\n",
-       "  '[0 1]': 0.00824808420342682,\n",
-       "  '[1 0]': 0.7874987939807336,\n",
-       "  '[1 1]': 0.33579160486351634}}"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "actions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'0': {'[]': 0},\n",
-       " '1': {'[0]': 0, '[1]': 0},\n",
-       " '2': {'[0 0]': 0, '[0 1]': 0, '[1 0]': 0, '[1 1]': 0}}"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tree.actions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "prob_2L(tree.actions, at)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'0': {'[]': [0.032962484545468684,\n",
-       "   0.6863144184684542,\n",
-       "   0.7392691047949408,\n",
-       "   0.6578099746897761]},\n",
-       " '1': {'[0]': [0.5110449637454709, 0.002096637870309781],\n",
-       "  '[1]': [0.3504688649073524, 0.08617097607361901]},\n",
-       " '2': {'[0 0]': [0.24777983301229067],\n",
-       "  '[0 1]': [0.8778730352077802],\n",
-       "  '[1 0]': [0.2266544423264727],\n",
-       "  '[1 1]': [0.8117419775022194]}}"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "actions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -269,26 +166,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "##### ACTOR CLASSS ####\n",
     "class Actor(tf.keras.Model):\n",
-    "    #input_dim: 1 if layer=0, 3 if layer= 2, for the Kennedy receiver ##\n",
-    "    def __init__(self, input_dim=1, valreg=0.01, seed_val=0.1, pad_value = -7.,\n",
-    "                 dolinar_layers=2, nature=\"primary\"):\n",
+    "    def __init__(self, nature, valreg=0.01, seed_val=0.1, pad_value = -7.,\n",
+    "                 dolinar_layers=2,tau=0.01):\n",
     "        super(Actor,self).__init__()\n",
     "        self.dolinar_layers = dolinar_layers\n",
     "        self.pad_value = pad_value\n",
     "        self.nature = nature\n",
-    "        self.mask = tf.keras.layers.Masking(mask_value=pad_value,\n",
-    "                                  input_shape=(1, 1))\n",
+    "        self.tau = tau\n",
+    "\n",
     "        if nature == \"primary\":\n",
     "            self.lstm = tf.keras.layers.LSTM(500, return_sequences=True, stateful=True)\n",
+    "            self.mask = tf.keras.layers.Masking(mask_value=pad_value,\n",
+    "                                  input_shape=(1, 1))\n",
     "        elif nature == \"target\":\n",
     "            self.lstm = tf.keras.layers.LSTM(500, return_sequences=True, stateful=False)\n",
+    "            self.mask = tf.keras.layers.Masking(mask_value=pad_value,\n",
+    "                                  input_shape=(self.dolinar_layers, 1)) #'cause i feed altoghether.\n",
     "        else:\n",
     "            print(\"Hey! the character is either primary or target\")\n",
     "        self.l1 = Dense(250,kernel_initializer=tf.random_uniform_initializer(minval=-seed_val, maxval=seed_val),\n",
@@ -313,7 +213,7 @@
     "\n",
     "\n",
     "\n",
-    "    def update_target_parameters(self,primary_net, tau=0.01):\n",
+    "    def update_target_parameters(self,primary_net):\n",
     "        #### only\n",
     "        # for i,j in zip(self.get_weights(), primary_net.get_weights()):\n",
     "        #     tf.assign(i, tau*j + (i-tau)*i )\n",
@@ -321,7 +221,7 @@
     "        targ_weights = self.get_weights()\n",
     "        weights = []\n",
     "        for i in tf.range(len(prim_weights)):\n",
-    "            weights.append(tau * prim_weights[i] + (1 - tau) * targ_weights[i])\n",
+    "            weights.append(self.tau * prim_weights[i] + (1 - self.tau) * targ_weights[i])\n",
     "        self.set_weights(weights)\n",
     "        return\n",
     "\n",
@@ -337,20 +237,20 @@
     "\n",
     "        return feat\n",
     "\n",
-    "    def targeted_sequence(self, experiences_vector):\n",
+    "    def targeted_sequence(self, experiences):\n",
     "\n",
     "        #This function takes a vector of experiences:\n",
     "        #vector = (\\beta1, o1, \\beta2, o2, \\beta3, o3,...,o_L, guess)\n",
     "        #and retrieves\n",
     "        #(\\beta1, o1, \\beta2_target, o2, \\beta3_target, o3, \\beta4_target,... ,o_L, guess)\n",
-    "        #actor_target.lstm.reset_states() NO! \n",
+    "        #actor_target.lstm.reset_states() NO!\n",
     "        if self.nature != \"target\":\n",
     "            raise AttributeError(\"check the lstm memory of actor target, stateful == True ?\")\n",
     "            return\n",
-    "        export = experiences_vector.copy()\n",
+    "        export = experiences.copy()\n",
     "        for index in range(1,2*self.dolinar_layers-1,2): # I consider from first outcome to last one (but guess)\n",
     "            export[:,index+1] = np.squeeze(self(np.reshape(np.array(export[:,index]),\n",
-    "                                                                 (experiences_vector.shape[0],1,1))))\n",
+    "                                                                 (experiences.shape[0],1,1))))\n",
     "        return export\n",
     "\n",
     "    def __str__(self):\n",
